--- a/Frontend_Angular/src/app/login/login.component.html
+++ b/Frontend_Angular/src/app/login/login.component.html
@@ -41,7 +41,7 @@
           Invalid email or password!
         </p>
         <button
-          style="background: #ff8a00; color: white; margin-top: 1rem"
+          style="background: #ff3c00; color: white; margin-top: 1rem"
           mat-raised-button
         >
           Login
