--- a/Frontend_Angular/src/app/login/login.component.html
+++ b/Frontend_Angular/src/app/login/login.component.html
@@ -7,7 +7,7 @@
         <img src="../../assets/gtLogo.png" alt="Logo" />
         <h1 class="login">Login</h1>
       </header>
-      <form class="example-form">
+      <form class="example-form" (ngSubmit)="onSubmit()">
         <mat-form-field class="example-full-width input1 ">
           <mat-label>Email</mat-label>
           <input
