--- a/Frontend_Angular/src/app/success-page/success-page.component.html
+++ b/Frontend_Angular/src/app/success-page/success-page.component.html
@@ -1,1 +1,9 @@
-<p>success-page works!</p>
+<div>
+    <img src="../../assets/mark.png" alt="mark"/>
+    <button
+    style="background: #ff8a00; color: white; margin-top: 1rem"
+    mat-raised-button
+  >
+  Successful
+  </button>
+</div>>
