--- a/Frontend_Angular/src/app/create-target/create-target.component.html
+++ b/Frontend_Angular/src/app/create-target/create-target.component.html
@@ -1,1 +1,37 @@
-<p>create-target works!</p>
+<!-- app.component.html -->
+<header>
+    <img src="path/to/logo.png" alt="Logo" class="logo">
+  </header>
+  <main>
+    <div class="container">
+      <h1 class="text-center">Accommodation</h1>
+      <form (ngSubmit)="onSubmit()">
+        <div class="form-group">
+          <label for="percentage">Percentage</label>
+          <select class="form-control" id="percentage" name="percentage" [(ngModel)]="selectedPercentage">
+            <option *ngFor="let percentage of percentages" [value]="percentage">{{ percentage }}%</option>
+          </select>
+        </div>
+        <div class="form-group">
+          <label for="frequency">Frequency</label>
+          <select class="form-control" id="frequency" name="frequency" [(ngModel)]="selectedFrequency">
+            <option *ngFor="let frequency of frequencies" [value]="frequency">{{ frequency }}</option>
+          </select>
+        </div>
+        <div class="form-group">
+          <label for="startDate">Start Date</label>
+          <input type="date" class="form-control" id="startDate" name="startDate" [(ngModel)]="startDate">
+        </div>
+        <div class="form-group">
+          <label for="endDate">End Date</label>
+          <input type="date" class="form-control" id="endDate" name="endDate" [(ngModel)]="endDate">
+        </div>
+        <div class="form-group form-check">
+          <input type="checkbox" class="form-check-input" id="termsAndConditions" name="termsAndConditions" [(ngModel)]="termsAndConditions">
+          <label class="form-check-label" for="termsAndConditions">I agree to the terms and conditions</label>
+        </div>
+        <button type="submit" class="btn btn-primary" [disabled]="!termsAndConditions">Submit</button>
+      </form>
+    </div>
+  </main>
+  
