--- a/Frontend_Angular/src/app/savings-page/savings-page.component.html
+++ b/Frontend_Angular/src/app/savings-page/savings-page.component.html
@@ -1,1 +1,13 @@
-<p>savings-page works!</p>
+<!-- app.component.html -->
+<header>
+    <img src="../../assets/gtLogo.png" alt="Logo" class="logo">
+    <nav>
+      <ul class="menu">
+        <li><button (click)="onButtonClick(1)">Accomodation</button></li>
+        <li><button>Business</button></li>
+        <li><button>Education</button></li>
+        <li><button>Vacation</button></li>
+      </ul>
+    </nav>
+</header>
+  
