--- a/Frontend_Angular/src/app/create-savings-goal/create-savings-goal.component.html
+++ b/Frontend_Angular/src/app/create-savings-goal/create-savings-goal.component.html
@@ -1,1 +1,11 @@
-<p>create-savings-goal works!</p>
+<header>
+    <img src="../../assets/gtLogo.png" alt="Logo" class="logo">
+    <nav>
+      <ul class="menu">
+        <li><button>Accomodation</button></li>
+        <li><button>Business</button></li>
+        <li><button>Education</button></li>
+        <li><button>Vacation</button></li>
+      </ul>
+    </nav>
+</header>
