--- a/Frontend_Angular/src/app/create-target/create-target.component.html
+++ b/Frontend_Angular/src/app/create-target/create-target.component.html
@@ -1,5 +1,6 @@
 
 <header>
+  <mat-icon>arrow_back</mat-icon>
     <img src="../../assets/gtLogo.png" alt="Logo" class="logo">
   </header>
   <main>
