--- a/Frontend_Angular/src/app/dashboard/dashboard.component.html
+++ b/Frontend_Angular/src/app/dashboard/dashboard.component.html
@@ -3,8 +3,12 @@
         <img src="../../assets/afterLogin.png" alt=""/>
     
     </div>
-    <div>
-        <img src="../../assets/saving" alt="savings-logo"/>
-    </div>
+
+    <a href="/create-savings-goal">
+        <div>
+            <img src="../../assets/saving" alt="savings-logo"/>
+        </div>
+    </a>
+    
 </div>
 
