--- a/Frontend_Angular/src/app/dashboard/dashboard.component.html
+++ b/Frontend_Angular/src/app/dashboard/dashboard.component.html
@@ -4,7 +4,8 @@
     
     </div>
     <div>
-        <img src="../../assets/saving" alt="savings-logo"/>
+        <img src="../../assets/savings.svg" alt="savings-logo"/>
+        <p>grow your savings</p>
     </div>
 </div>
 
