--- a/Frontend_Angular/src/app/create-savings-goal/create-savings-goal.component.html
+++ b/Frontend_Angular/src/app/create-savings-goal/create-savings-goal.component.html
@@ -1,11 +1,26 @@
 <header>
     <img src="../../assets/gtLogo.png" alt="Logo" class="logo">
-    <nav>
-      <ul class="menu">
-        <li><button>Accomodation</button></li>
-        <li><button>Business</button></li>
-        <li><button>Education</button></li>
-        <li><button>Vacation</button></li>
-      </ul>
-    </nav>
+    
 </header>
+<mat-card>
+    
+    <button>Accomodation</button>
+
+</mat-card>
+
+<mat-card>
+
+    <button>Business</button>
+
+</mat-card>
+<mat-card>
+    
+    <button>Emergency</button>
+
+</mat-card>
+
+<mat-card>
+
+    <button>Others</button>
+
+</mat-card>
