--- a/Frontend_Angular/src/app/create-savings-goal/create-savings-goal.component.css
+++ b/Frontend_Angular/src/app/create-savings-goal/create-savings-goal.component.css
@@ -6,7 +6,7 @@ header {
     padding: 1rem;
   }
   
-  .logo {
+  /* .logo {
     height: 50px;
     width: auto;
   }
@@ -28,4 +28,11 @@ header {
   button:hover {
     background-color: #ddd;
   }
-  
+   */
+
+   @media only screen and (max-width: 540px) {
+    mat-card{
+        margin: 2em auto;
+    }
+   }
+   
