--- a/Frontend_Angular/src/app/login/login.component.html
+++ b/Frontend_Angular/src/app/login/login.component.html
@@ -1,11 +1,11 @@
 <body>
-  <mat-card>
-    <mat-card-content>
+  
 
       <div *ngIf="loginError">
         <p>An error occurred while logging in. Please try again later.</p>
       </div>
-      <div class="card">
+      <mat-card class="card">
+        
         <header class="login-cont">
           <img src="../../assets/gtLogo.png" alt="Logo" />
           <h1 class="login">Login</h1>
@@ -44,16 +44,14 @@
             Invalid email or password!
           </p>
           <button
-            style="background: #ff3c00; color: white; margin-top: 1rem"
+            style="background: #ff3c00; color: white; margin-top: 1rem; height: 50px;"
             mat-raised-button
           >
             Login
           </button>
         </form>
-      </div>
-    </mat-card-content>
+      </mat-card>
     
-  </mat-card>
     
   </body>
   
