--- a/Frontend_Angular/src/app/manage-savings/manage-savings.component.html
+++ b/Frontend_Angular/src/app/manage-savings/manage-savings.component.html
@@ -1,11 +1,11 @@
-<div>
-    <div class="content">
-        <img src="../../assets/mark-left.png" alt="mark-left"/>
-        <p>>Manage your savings</p></div>
-        <div class="cards">
-            <p class="create">
-                Create a goal
-            </p>
-            <p>Track savings goal</p>
-        </div>
-</div>>
+<mat-card>
+    
+        <button>Create a Savings Goal</button>
+   
+</mat-card>
+
+<mat-card>
+    
+        <button>Track savings goal</button>
+    
+</mat-card>
