--- a/Frontend_Angular/src/app/create-savings-goal/create-savings-goal.component.css
+++ b/Frontend_Angular/src/app/create-savings-goal/create-savings-goal.component.css
@@ -33,6 +33,16 @@ header {
    @media only screen and (max-width: 540px) {
     mat-card{
         margin: 2em auto;
+        width: 80%;
+    }
+    button{
+        background-color: white;
+        border-color:white;
+       
+    }
+    button:hover{
+        background-color: #ff3c00;
+        color: white;
     }
    }
    
