--- a/Frontend_Angular/src/app/create-savings-goal/create-savings-goal.component.html
+++ b/Frontend_Angular/src/app/create-savings-goal/create-savings-goal.component.html
@@ -4,23 +4,23 @@
 </header>
 <mat-card>
     
-    <button>Accomodation</button>
+    <button (click)="onAccomodation()">Accomodation</button>
 
 </mat-card>
 
 <mat-card>
 
-    <button>Business</button>
+    <button (click)="onBusiness()">Business</button>
 
 </mat-card>
 <mat-card>
     
-    <button>Emergency</button>
+    <button (click)="onEmergency()">Emergency</button>
 
 </mat-card>
 
 <mat-card>
 
-    <button>Others</button>
+    <button (click)="onOthers()">Others</button>
 
 </mat-card>
