--- a/Frontend_Angular/src/app/manage-savings/manage-savings.component.html
+++ b/Frontend_Angular/src/app/manage-savings/manage-savings.component.html
@@ -1,11 +1,11 @@
 <mat-card>
     
-        <button>Create a Savings Goal</button>
+        <button (click)="onCreateSavingsClick()" >Create a Savings Goal</button>
    
 </mat-card>
 
 <mat-card>
     
-        <button>Track savings goal</button>
+        <button (click)="onCreateButtonClick()">Track savings goal</button>
     
 </mat-card>
