--- a/Frontend_Angular/src/app/create-savings-goal/create-savings-goal.component.css
+++ b/Frontend_Angular/src/app/create-savings-goal/create-savings-goal.component.css
@@ -38,11 +38,17 @@ header {
     button{
         background-color: white;
         border-color:white;
+        height: 50px;
+        font-size: 16px;
+        font-weight: 700;
        
     }
     button:hover{
         background-color: #ff3c00;
         color: white;
+        border-color: #ff3c00;
+
+
     }
    }
    
