--- a/Frontend_Angular/src/app/manage-savings/manage-savings.component.css
+++ b/Frontend_Angular/src/app/manage-savings/manage-savings.component.css
@@ -27,11 +27,15 @@
 button{
     background-color: white;
     border-color:white;
+    height: 50px;
+    font-size: 16px;
+    font-weight: 700;
    
 }
 button:hover{
     background-color: #ff3c00;
     color: white;
+    border-color: #ff3c00;
 }
 }
 
