--- a/Frontend_Angular/src/app/dashboard/dashboard.component.html
+++ b/Frontend_Angular/src/app/dashboard/dashboard.component.html
@@ -5,7 +5,7 @@
     </div>
     <div>
         <img src="../../assets/savings.svg" alt="savings-logo"/>
-        <p (click)="onClick">grow your savings</p>
+        <p (click)="onClick()" style="cursor: pointer;">grow your savings</p>
     </div>
 </div>
 
