--- a/Frontend_Angular/src/app/create-savings-goal/create-savings-goal.component.css
+++ b/Frontend_Angular/src/app/create-savings-goal/create-savings-goal.component.css
@@ -50,5 +50,19 @@ header {
 
 
     }
+    p{
+        text-align: center;
+         font-size: 16px; 
+         font-weight: 700; 
+         margin: 0;
+         padding: 0;
+      }
+      nav{
+        background-color: #ff3c00;
+        color: white;
+      }
+      .content{
+        margin-top: 40px;
+      }
    }
    
