--- a/Frontend_Angular/src/app/success-page/success-page.component.html
+++ b/Frontend_Angular/src/app/success-page/success-page.component.html
@@ -1,9 +1,9 @@
-<div class="content"><mat-icon>arrow_back</mat-icon></div>
+
 <div>
     <img src="../../assets/mark.png" alt="mark"/>
     <button
     style="background: #ff3c00; color: white; margin-top: 1rem"
-    mat-raised-button
+    mat-raised-button (click)="onClick()"
   >
   Successful
   </button>
