--- a/Frontend_Angular/src/app/create-savings-goal/create-savings-goal.component.html
+++ b/Frontend_Angular/src/app/create-savings-goal/create-savings-goal.component.html
@@ -1,12 +1,10 @@
 <nav> 
     <mat-icon  (click)="onClick()">arrow_back</mat-icon>
-    <p >Start your savings</p>
-    <header style="float: right;">
-        <img src="../../assets/gtLogo.png" alt="Logo" class="logo">
-        
-    </header>
+    <p class="nav-content">Start your savings</p>
+    
 </nav>
-
+<span >&#8358;{{ this.totalBalance }}</span>
+<p> Select a savings goal</p>
 <div class="content">
     <mat-card>
     
