--- a/Frontend_Angular/src/app/create-savings-goal/create-savings-goal.component.css
+++ b/Frontend_Angular/src/app/create-savings-goal/create-savings-goal.component.css
@@ -50,32 +50,41 @@ header {
 
 
     }
-    .nav-content{
-        text-align: center;
-         font-size: 16px; 
-         font-weight: 700; 
-         margin: 0;
-         padding: 0;
-      }
+    
       nav{
         background-color: #ff3c00;
         color: white;
+        display: flex;
+        gap: 4rem;
+        padding: 1rem;
       }
       .content{
         margin-top: 40px;
       }
 
-      span{
-        font-size: 30px;
-       position: relative;
-       left: 30px;
-       top: 20px;
+      .balance{
+        text-align: left;
+        font-size: 25px;
+        padding: 2rem 1.2rem;
 
       }
       p{
-        position: relative;
-        left: 35px;
-        top: 30px;
+        text-align: center;
+         font-size: 16px; 
+         font-weight: 700; 
+         font-size: 1.2rem;
+         margin-bottom: 0;
+      }
+      .select{
+        font-weight: 100;
+        text-align: left;
+        padding-left: 1.2rem;
+      }
+
+      mat-icon{
+        color: white;
+        cursor: pointer;
+        font-size: 1.5rem;
       }
    }
    
