--- a/Frontend_Angular/src/app/create-savings-goal/create-savings-goal.component.html
+++ b/Frontend_Angular/src/app/create-savings-goal/create-savings-goal.component.html
@@ -3,8 +3,8 @@
     <p class="nav-content">Start your savings</p>
     
 </nav>
-<span >&#8358;{{ this.totalBalance }}</span>
-<p> Select a savings goal</p>
+<p class="balance">Total Balance: &#8358;{{ this.totalBalance }}</p>
+<p class="select"> Select a savings goal</p>
 <div class="content">
     <mat-card>
     
