--- a/Frontend_Angular/src/app/create-target/create-target.component.css
+++ b/Frontend_Angular/src/app/create-target/create-target.component.css
@@ -19,4 +19,19 @@ header {
   .text-center {
     text-align: center;
   }
-  
+  @media only screen and (max-width: 540px){
+    nav{
+      background-color: #ff3c00;
+      color: white;
+      display: flex;
+      gap: 4rem;
+      padding: 1rem;
+    }
+    p{
+      text-align: center;
+       font-size: 16px; 
+       font-weight: 700; 
+       font-size: 1.2rem;
+       margin-bottom: 0;
+    }
+  }
