--- a/Frontend_Angular/src/app/create-target/create-target.component.html
+++ b/Frontend_Angular/src/app/create-target/create-target.component.html
@@ -1,11 +1,13 @@
 
-<header>
-  <mat-icon>arrow_back</mat-icon>
-    <img src="../../assets/gtLogo.png" alt="Logo" class="logo">
-  </header>
+    
+  <nav> 
+    <mat-icon  (click)="onClick()">arrow_back</mat-icon>
+    <p class="nav-content">Accomodation
+    
+</nav>
   <main>
     <div class="container">
-      <h1 class="text-center">Accommodation</h1>
+      <h1 class="text-center">Save for your dream home</h1>
       <form (ngSubmit)="onSubmit()">
         <div class="form-group">
           <label for="percentage">Percentage</label>
