--- a/Frontend_Angular/src/app/dashboard/dashboard.component.css
+++ b/Frontend_Angular/src/app/dashboard/dashboard.component.css
@@ -4,8 +4,20 @@
       background-image: url('/assets/login_BG.png');
       background-repeat: no-repeat;
       background-size: cover;
-      height:100vh;
+      /* height:100vh; */
+      width: 100%;
     }
     
+    .manage{
+      padding-left: 1.9rem;
+      cursor: pointer;
+      text-align: center;
+      width: 7.5rem;
+    }
+
+    p{
+      width: 7.5rem;
+      
+    }
   
   }
