--- a/Frontend_Angular/src/app/manage-savings/manage-savings.component.css
+++ b/Frontend_Angular/src/app/manage-savings/manage-savings.component.css
@@ -32,8 +32,7 @@ p{
   text-align: center;
    font-size: 16px; 
    font-weight: 700; 
-   margin: 0;
-   padding: 0;
+   font-size: 1.2rem;
 }
 button{
     background-color: white;
@@ -51,11 +50,16 @@ button:hover{
 nav{
   background-color: #ff3c00;
   color: white;
+  display: flex;
+  gap: 4rem;
+  padding: 1rem;
 }
 mat-icon{
   color: white;
   cursor: pointer;
-  font-size: 20px;
+  font-size: 1.5rem;
 }
+
+
 }
 
