--- a/Frontend_Angular/src/app/savings-tracker/savings-tracker.component.html
+++ b/Frontend_Angular/src/app/savings-tracker/savings-tracker.component.html
@@ -1,1 +1,32 @@
-<p>savings-tracker works!</p>
+<nav> 
+    <mat-icon  (click)="onClick()">arrow_back</mat-icon>
+    <p class="nav-content">Track your Savings
+    
+</nav>
+
+<p class="Text"> See how close you are to achieving your goal</p>
+<div class="content">
+    <mat-card>
+    
+        <button>Accomodation</button>
+    
+    <!-- </mat-card>
+    
+    <mat-card>
+    
+        <button (click)="onBusiness()">Business</button>
+    
+    </mat-card>
+    <mat-card>
+        
+        <button (click)="onEmergency()">Emergency</button>
+    
+    </mat-card>
+
+    
+    <mat-card>
+    
+        <button (click)="cancelPlan()">Cancel Plan</button>
+    
+    </mat-card> -->
+<!-- </div> -->
