--- a/Frontend_Angular/src/app/success-page/success-page.component.html
+++ b/Frontend_Angular/src/app/success-page/success-page.component.html
@@ -3,8 +3,7 @@
     <img src="../../assets/mark.png" alt="mark" style="margin-bottom: 10px;"/>
     <button
     style="background: #ff3c00; color: white; margin-top: 1rem; width: 80%; height: 50px;"
-    mat-raised-button (click)="onClick()"
-  >
+    mat-raised-button (click)="onClick()">
   Successful
   </button>
-</div>>
+</div>
