--- a/Frontend_Angular/src/app/savings-tracker/savings-tracker.component.html
+++ b/Frontend_Angular/src/app/savings-tracker/savings-tracker.component.html
@@ -1,32 +1,44 @@
-<nav> 
-    <mat-icon  (click)="onClick()">arrow_back</mat-icon>
-    <p class="nav-content">Track your Savings
-    
+<nav>
+  <mat-icon (click)="onClick()">arrow_back</mat-icon>
+  <p class="nav-content">Track your Savings</p>
 </nav>
 
-<p class="Text"> See how close you are to achieving your goal</p>
+<p class="Text">See how close you are to achieving your goal</p>
 <div class="content">
-    <mat-card>
-    
-        <button>Accomodation</button>
-    
-    <!-- </mat-card>
-    
-    <mat-card>
-    
-        <button (click)="onBusiness()">Business</button>
-    
-    </mat-card>
-    <mat-card>
-        
-        <button (click)="onEmergency()">Emergency</button>
-    
-    </mat-card>
+  <div class="ImgText">
+    <img src="../../assets/GTCO 2.svg" alt="HomeIcon" width="70px" />
 
-    
-    <mat-card>
-    
-        <button (click)="cancelPlan()">Cancel Plan</button>
-    
-    </mat-card> -->
-<!-- </div> -->
+    <div>
+
+        <h3>Accomodation</h3>
+  
+
+        <div class="TargetBalance">
+          <div class="Target">
+            <p>Target</p>
+            <p>#100,000.00</p>
+          </div>
+      
+          <div class="Balance">
+            <p>Balance</p>
+      
+            <p>#50,000.00</p>
+          </div>
+        </div>
+
+    </div>
+
+   
+</div>
+
+  <br />
+  <br />
+
+  <div class="">
+    <p>Amount Saved</p>
+    <p>#50,000.00</p>
+
+    <p>Interest Earned</p>
+    <p>#5,000.00</p>
+  </div>
+</div>
