--- a/Frontend_Angular/src/app/savings-page/savings-page.component.html
+++ b/Frontend_Angular/src/app/savings-page/savings-page.component.html
@@ -1,1 +1,4 @@
+<!-- input.component.html -->
+<input [(ngModel)]="totalBalance" placeholder="Enter Total Balance">
+<button (click)="onSubmit()">Submit</button>
 
