--- a/Frontend_Angular/src/app/create-target/create-target.component.css
+++ b/Frontend_Angular/src/app/create-target/create-target.component.css
@@ -1,37 +1,69 @@
-/* styles.css */
-header {
-    display: flex;
-    justify-content: flex-end;
-    padding: 1rem;
-  }
-  
-  .logo {
-    height: 50px;
-    width: auto;
-  }
-  
   .container {
     max-width: 600px;
     margin: 0 auto;
     padding: 1rem;
   }
-  
-  .text-center {
+  h1{
     text-align: center;
   }
-  @media only screen and (max-width: 540px){
-    nav{
+  .main{
+    display:flex;
+    align-content: center;
+    justify-content:center;
+    flex-direction: column;
+  }
+   nav{
       background-color: #ff3c00;
       color: white;
       display: flex;
       gap: 4rem;
       padding: 1rem;
     }
-    p{
+    .form-group{
+  width: 90%;
+  margin: 0 auto;
+}
+  
+ 
+  @media only screen and (max-width: 540px){
+    .nav-content{
       text-align: center;
        font-size: 16px; 
        font-weight: 700; 
        font-size: 1.2rem;
        margin-bottom: 0;
     }
+
+   .selectAll {
+  background-color: #D9D9D9;
+  width:100%;
+  border-radius:12px;
+  margin-block: 1rem;
+  padding-inline:0.5rem;
+  height:2rem;
+  border:none
+
+}
+select {
+  background-image: url('/assets/arrow-down.svg');
+  background-position: right center;
+  padding-right: 20px;
+  appearance:none;
+  -moz-appearance:none;
+  -webkit-appearance:none;
+  background-repeat: no-repeat;
+  background-size: 40px;
+};
+option:hover {
+  background-color: #ff3c00;
+  color: white;
+};
+ button{
+    width: 100%;
+  };
+  .form{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
   }
