--- a/Frontend_Angular/src/app/login/login.component.css
+++ b/Frontend_Angular/src/app/login/login.component.css
@@ -22,6 +22,9 @@
     margin-bottom: 2rem;;
   
   }
+  .login{
+    color:#E66935;
+  }
   
   h1 {
     font-size: 48px;
@@ -34,13 +37,13 @@
     width: 31rem;;
     padding: 2rem 1rem;
     border-radius: 10px;
+    border: 2px solid #E6E6E6
   }
   .input1{
     padding-block-end: 2rem;
   }
   a {
     color: #ff8a00;
-    padding-block-end: 2rem;
     font-size: 1rem;
     text-decoration: none;
   }
@@ -48,11 +51,19 @@
     align-self: center;
     font-weight: 500;
     font-size: 1.2rem;
+    width:10rem;
     
     
   }
+  .signUp{
+    display: flex;
+    justify-content: center;
+  }
+
   
-  
+  span{
+    color:#ff8a00;
+  }
   
   @media only screen and (max-width: 540px) {
     img{
