--- a/Frontend_Angular/src/app/create-target/create-target.component.html
+++ b/Frontend_Angular/src/app/create-target/create-target.component.html
@@ -7,8 +7,8 @@
   <main>
     <div class="container">
      <div>
-  <label for="inputNumber">Enter a number greater than &#8358; 1000 and less than &#8358; 10000:</label>
-  <input type="number" id="inputNumber" [(ngModel)]="targetAmount" required min="1001" max="9999" (change)="checkInputNumber()">
+  <label for="inputNumber">Enter a Amount greater than &#8358; 1000 and less than &#8358; 1000000:</label>
+  <input type="number" id="inputNumber" [(ngModel)]="targetAmount" required min="1001" max="999999" (change)="checkInputNumber()">
   <div *ngIf="errorMessage">{{errorMessage}}</div>
 </div>
       <h1 class="text-center">Save for your dream home</h1>
