--- a/Frontend_Angular/src/app/login/login.component.html
+++ b/Frontend_Angular/src/app/login/login.component.html
@@ -1,10 +1,8 @@
 <body>
-  
-
       <div *ngIf="loginError">
         <p>An error occurred while logging in. Please try again later.</p>
       </div>
-      <mat-card class="card">
+      <div class="card">
         <header class="login-cont">
           <img src="../../assets/gtLogo.png" alt="Logo" />
           <h1 class="login">Log in</h1>
@@ -45,17 +43,15 @@
           </p>
 
           <button
-            style=" background: #ff3c00; color: white; margin-top: 1rem; height: 50px;"
+            style=" background: #E66935; color: white; margin-top: 1rem; height: 50px;"
             mat-raised-button
           >
             Login
           </button>
         </form>
-        <div class="signUp">
+      
           <p>Not registered? <span>Sign Up</span></p>
-        
-        </div>
-      </mat-card>
+      </div>
     
     
   </body>
